add threshold for distance, re-run the example notebook

--- a/examples/lisflood.ipynb
+++ b/examples/lisflood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8ad24cbe",
+   "id": "98b6b9e6",
    "metadata": {},
    "source": [
     "![image](https://www.ewatercycle.org/assets/logo.png)"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2e1304eb",
+   "id": "4f336cab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,10 +25,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "78d8a9d4",
+   "execution_count": 2,
+   "id": "373ad524",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/fakhereh/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/_warnings.py:18: UserWarning: \n",
+      "  Thank you for trying out the new ESMValCore API.\n",
+      "  Note that this API is experimental and may be subject to change.\n",
+      "  More info: https://github.com/ESMValGroup/ESMValCore/issues/498\n",
+      "/home/fakhereh/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:254: ESMValToolDeprecationWarning: `write_plots` will be removed in 2.4.0.\n",
+      "/home/fakhereh/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:255: ESMValToolDeprecationWarning: `write_netcdf` will be removed in 2.4.0.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from ewatercycle import CFG\n",
@@ -39,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fafe549f",
+   "id": "63b3cc53",
    "metadata": {},
    "source": [
     "## Run lisflood class\n",
@@ -56,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4c871063",
+   "id": "2b7fef27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "11aafcbc",
+   "id": "d227fd31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d2686cb2",
+   "id": "868a912f",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ec981ac5",
+   "id": "257e524d",
    "metadata": {},
    "outputs": [
     {
@@ -136,13 +149,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1067b40f",
+   "id": "da10144a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ewatercycle.models.lisflood.Lisflood at 0x2abdf3b77220>"
+       "<ewatercycle.models.lisflood.Lisflood at 0x2ba9ef8bb610>"
       ]
      },
      "execution_count": 7,
@@ -159,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "29ab8953",
+   "id": "28414949",
    "metadata": {},
    "outputs": [
     {
@@ -189,14 +202,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0526226d",
+   "id": "da11e63c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running /nfs/home2/fakhereh/temp/lisflood_run/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 45819\n"
+      "Running /nfs/home2/fakhereh/temp/lisflood_run/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 48597\n"
      ]
     }
    ],
@@ -208,15 +221,15 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "72b9d383",
+   "id": "6936d901",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/scratch/shared/ewatercycle/lisflood_20210618_115651/lisflood_setting.xml\n",
-      "/scratch/shared/ewatercycle/lisflood_20210618_115651\n"
+      "/scratch/shared/ewatercycle/lisflood_20210618_132037/lisflood_setting.xml\n",
+      "/scratch/shared/ewatercycle/lisflood_20210618_132037\n"
      ]
     },
     {
@@ -248,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1a39c125",
+   "id": "87553315",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "11284019",
+   "id": "b96dc253",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "caebef64",
+   "id": "996b02f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d71fad2d",
+   "id": "53411e09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d70caf6f",
+   "id": "8c646a0a",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bee75662",
+   "id": "982a7184",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f350c0b7",
+   "id": "1d63e289",
    "metadata": {},
    "outputs": [
     {
@@ -701,13 +714,13 @@
        "  * latitude   (latitude) float64 89.95 89.85 89.75 ... -59.75 -59.85 -59.95\n",
        "    time       object 1990-01-03 00:00:00\n",
        "Attributes:\n",
-       "    units:    m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'Discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1500</li><li><span class='xr-has-index'>longitude</span>: 3600</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-3d4476f3-9fc9-406f-8a5d-652ef129e9ae' class='xr-array-in' type='checkbox' checked><label for='section-3d4476f3-9fc9-406f-8a5d-652ef129e9ae' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:    m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'Discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1500</li><li><span class='xr-has-index'>longitude</span>: 3600</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-4b37baf1-6415-481c-a1b1-94987568aba6' class='xr-array-in' type='checkbox' checked><label for='section-4b37baf1-6415-481c-a1b1-94987568aba6' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-aeed1461-f898-42f2-95c9-0ffe785db7e6' class='xr-section-summary-in' type='checkbox'  checked><label for='section-aeed1461-f898-42f2-95c9-0ffe785db7e6' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-179.9 -179.8 ... 179.8 179.9</div><input id='attrs-6a5475ba-a27e-4b1e-8557-dacddb11427c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-6a5475ba-a27e-4b1e-8557-dacddb11427c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-d0ea40da-54ed-4b8c-9c48-fdd93777623c' class='xr-var-data-in' type='checkbox'><label for='data-d0ea40da-54ed-4b8c-9c48-fdd93777623c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-179.95, -179.85, -179.75, ...,  179.75,  179.85,  179.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.95 89.85 89.75 ... -59.85 -59.95</div><input id='attrs-38d71132-8663-4510-bf34-ab416c23e85c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-38d71132-8663-4510-bf34-ab416c23e85c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e85f7882-9793-4f80-b415-fdcf5c34f916' class='xr-var-data-in' type='checkbox'><label for='data-e85f7882-9793-4f80-b415-fdcf5c34f916' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 89.95,  89.85,  89.75, ..., -59.75, -59.85, -59.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-01-03 00:00:00</div><input id='attrs-438430c5-2e69-473a-9dd9-6e20ec62abfd' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-438430c5-2e69-473a-9dd9-6e20ec62abfd' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-1497d998-faa6-4c4b-8ab3-dd31b7908487' class='xr-var-data-in' type='checkbox'><label for='data-1497d998-faa6-4c4b-8ab3-dd31b7908487' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 1, 3, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c0acc963-817d-47c4-acfa-6d4dbc973d19' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c0acc963-817d-47c4-acfa-6d4dbc973d19' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m^3/s</dd></dl></div></li></ul></div></div>"
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-ca8f9b26-1316-4887-89d1-b31dba871c14' class='xr-section-summary-in' type='checkbox'  checked><label for='section-ca8f9b26-1316-4887-89d1-b31dba871c14' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-179.9 -179.8 ... 179.8 179.9</div><input id='attrs-723cd84c-a661-47cd-af80-eadb0814a205' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-723cd84c-a661-47cd-af80-eadb0814a205' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-713efe45-4873-4fec-b59e-548f447507b3' class='xr-var-data-in' type='checkbox'><label for='data-713efe45-4873-4fec-b59e-548f447507b3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-179.95, -179.85, -179.75, ...,  179.75,  179.85,  179.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.95 89.85 89.75 ... -59.85 -59.95</div><input id='attrs-e6f8a835-391f-4e92-8a69-fa9bd4d5e676' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e6f8a835-391f-4e92-8a69-fa9bd4d5e676' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5009fb22-b31b-4cf6-901a-e5463ca971aa' class='xr-var-data-in' type='checkbox'><label for='data-5009fb22-b31b-4cf6-901a-e5463ca971aa' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 89.95,  89.85,  89.75, ..., -59.75, -59.85, -59.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-01-03 00:00:00</div><input id='attrs-089b663a-8bd3-4747-bc43-f4f646ee39d2' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-089b663a-8bd3-4747-bc43-f4f646ee39d2' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-b83581a8-ebc9-43f8-8b40-cf233cb1ef9c' class='xr-var-data-in' type='checkbox'><label for='data-b83581a8-ebc9-43f8-8b40-cf233cb1ef9c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 1, 3, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-91b6f50c-28a0-47f3-a89a-b261f8d03b8e' class='xr-section-summary-in' type='checkbox'  checked><label for='section-91b6f50c-28a0-47f3-a89a-b261f8d03b8e' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'Discharge' (latitude: 1500, longitude: 3600)>\n",
@@ -738,13 +751,13 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8324693d",
+   "id": "eaf39e02",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x2abdf5087760>"
+       "<matplotlib.collections.QuadMesh at 0x2ba9f0dd3640>"
       ]
      },
      "execution_count": 18,
@@ -774,14 +787,14 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6e8cc5fb",
+   "id": "81fd413f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your coordinates [(-71.35, 42.64)] match these model coordinates [(-71.35, 42.65)].\n"
+      "Your coordinates (-71.35, 42.64) are closest to these model coordinates (-71.35, 42.65).\n"
      ]
     },
     {
@@ -803,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2c2b5063",
+   "id": "5cad848d",
    "metadata": {},
    "outputs": [
     {
@@ -824,15 +837,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "8b0b973d",
+   "execution_count": 22,
+   "id": "4f446be0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your coordinates [(-71.35, 42.65), (5.6, 50.7)] match these model coordinates [(-71.35, 42.65), (5.65, 50.65)].\n"
+      "Your coordinates (-71.35, 42.65) are closest to these model coordinates (-71.35, 42.65).\n",
+      "Your coordinates (5.6, 50.7) are closest to these model coordinates (5.65, 50.65).\n"
      ]
     },
     {
@@ -841,7 +855,7 @@
        "array([1703886, 1416656])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,8 +867,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "9552268e",
+   "execution_count": 23,
+   "id": "2d6abd71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "971aa1cd",
+   "id": "7cfd4ec0",
    "metadata": {},
    "outputs": [],
    "source": []
