--- a/examples/lisflood.ipynb
+++ b/examples/lisflood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "98b6b9e6",
+   "id": "52e2f7fe",
    "metadata": {},
    "source": [
     "![image](https://www.ewatercycle.org/assets/logo.png)"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4f336cab",
+   "id": "df68dec9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,23 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "373ad524",
+   "execution_count": null,
+   "id": "aa855a37",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/fakhereh/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/_warnings.py:18: UserWarning: \n",
-      "  Thank you for trying out the new ESMValCore API.\n",
-      "  Note that this API is experimental and may be subject to change.\n",
-      "  More info: https://github.com/ESMValGroup/ESMValCore/issues/498\n",
-      "/home/fakhereh/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:254: ESMValToolDeprecationWarning: `write_plots` will be removed in 2.4.0.\n",
-      "/home/fakhereh/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:255: ESMValToolDeprecationWarning: `write_netcdf` will be removed in 2.4.0.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from ewatercycle import CFG\n",
@@ -52,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63b3cc53",
+   "id": "10125d57",
    "metadata": {},
    "source": [
     "## Run lisflood class\n",
@@ -69,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2b7fef27",
+   "id": "8ff5018d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d227fd31",
+   "id": "08860d19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "868a912f",
+   "id": "ceb61a04",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "257e524d",
+   "id": "c220553e",
    "metadata": {},
    "outputs": [
     {
@@ -149,13 +136,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "da10144a",
+   "id": "2717526a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ewatercycle.models.lisflood.Lisflood at 0x2ba9ef8bb610>"
+       "<ewatercycle.models.lisflood.Lisflood at 0x2b4b48470250>"
       ]
      },
      "execution_count": 7,
@@ -172,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "28414949",
+   "id": "3ade51be",
    "metadata": {},
    "outputs": [
     {
@@ -202,14 +189,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "da11e63c",
+   "id": "ec7d05f7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running /nfs/home2/fakhereh/temp/lisflood_run/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 48597\n"
+      "Running /nfs/home2/fakhereh/temp/lisflood_run/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 42559\n"
      ]
     }
    ],
@@ -221,15 +208,15 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6936d901",
+   "id": "e2707fc1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/scratch/shared/ewatercycle/lisflood_20210618_132037/lisflood_setting.xml\n",
-      "/scratch/shared/ewatercycle/lisflood_20210618_132037\n"
+      "/scratch/shared/ewatercycle/lisflood_20210621_164834/lisflood_setting.xml\n",
+      "/scratch/shared/ewatercycle/lisflood_20210621_164834\n"
      ]
     },
     {
@@ -261,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "87553315",
+   "id": "ebe5fdac",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b96dc253",
+   "id": "0ae3f0da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "996b02f0",
+   "id": "4fb130e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "53411e09",
+   "id": "ed424c51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8c646a0a",
+   "id": "97fdceaa",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "982a7184",
+   "id": "a08e63d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1d63e289",
+   "id": "d159b951",
    "metadata": {},
    "outputs": [
     {
@@ -714,13 +701,13 @@
        "  * latitude   (latitude) float64 89.95 89.85 89.75 ... -59.75 -59.85 -59.95\n",
        "    time       object 1990-01-03 00:00:00\n",
        "Attributes:\n",
-       "    units:    m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'Discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1500</li><li><span class='xr-has-index'>longitude</span>: 3600</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-4b37baf1-6415-481c-a1b1-94987568aba6' class='xr-array-in' type='checkbox' checked><label for='section-4b37baf1-6415-481c-a1b1-94987568aba6' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:    m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'Discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1500</li><li><span class='xr-has-index'>longitude</span>: 3600</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-10710cc1-1b8f-45c8-b6c0-591f03514933' class='xr-array-in' type='checkbox' checked><label for='section-10710cc1-1b8f-45c8-b6c0-591f03514933' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-ca8f9b26-1316-4887-89d1-b31dba871c14' class='xr-section-summary-in' type='checkbox'  checked><label for='section-ca8f9b26-1316-4887-89d1-b31dba871c14' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-179.9 -179.8 ... 179.8 179.9</div><input id='attrs-723cd84c-a661-47cd-af80-eadb0814a205' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-723cd84c-a661-47cd-af80-eadb0814a205' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-713efe45-4873-4fec-b59e-548f447507b3' class='xr-var-data-in' type='checkbox'><label for='data-713efe45-4873-4fec-b59e-548f447507b3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-179.95, -179.85, -179.75, ...,  179.75,  179.85,  179.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.95 89.85 89.75 ... -59.85 -59.95</div><input id='attrs-e6f8a835-391f-4e92-8a69-fa9bd4d5e676' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e6f8a835-391f-4e92-8a69-fa9bd4d5e676' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5009fb22-b31b-4cf6-901a-e5463ca971aa' class='xr-var-data-in' type='checkbox'><label for='data-5009fb22-b31b-4cf6-901a-e5463ca971aa' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 89.95,  89.85,  89.75, ..., -59.75, -59.85, -59.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-01-03 00:00:00</div><input id='attrs-089b663a-8bd3-4747-bc43-f4f646ee39d2' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-089b663a-8bd3-4747-bc43-f4f646ee39d2' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-b83581a8-ebc9-43f8-8b40-cf233cb1ef9c' class='xr-var-data-in' type='checkbox'><label for='data-b83581a8-ebc9-43f8-8b40-cf233cb1ef9c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 1, 3, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-91b6f50c-28a0-47f3-a89a-b261f8d03b8e' class='xr-section-summary-in' type='checkbox'  checked><label for='section-91b6f50c-28a0-47f3-a89a-b261f8d03b8e' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m^3/s</dd></dl></div></li></ul></div></div>"
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-e001452b-12fa-4c04-8670-df2ebc7540a1' class='xr-section-summary-in' type='checkbox'  checked><label for='section-e001452b-12fa-4c04-8670-df2ebc7540a1' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-179.9 -179.8 ... 179.8 179.9</div><input id='attrs-96a33734-845d-4f87-af7f-e3d7a038ef37' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-96a33734-845d-4f87-af7f-e3d7a038ef37' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-04adeab5-63fd-4547-a361-2f40106a0cfa' class='xr-var-data-in' type='checkbox'><label for='data-04adeab5-63fd-4547-a361-2f40106a0cfa' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-179.95, -179.85, -179.75, ...,  179.75,  179.85,  179.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.95 89.85 89.75 ... -59.85 -59.95</div><input id='attrs-3d974e5e-9f41-4c97-acc1-b4987409c690' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-3d974e5e-9f41-4c97-acc1-b4987409c690' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-008a7697-0b5b-486c-9b12-eb848e3f377f' class='xr-var-data-in' type='checkbox'><label for='data-008a7697-0b5b-486c-9b12-eb848e3f377f' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 89.95,  89.85,  89.75, ..., -59.75, -59.85, -59.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-01-03 00:00:00</div><input id='attrs-4b6f5d3c-a63c-4afe-8873-e5a3d868d1d3' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-4b6f5d3c-a63c-4afe-8873-e5a3d868d1d3' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-314da915-ce97-493f-b079-70f066e6f26c' class='xr-var-data-in' type='checkbox'><label for='data-314da915-ce97-493f-b079-70f066e6f26c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 1, 3, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-99e08af7-f5f1-4a39-8441-cbfcc2784e1e' class='xr-section-summary-in' type='checkbox'  checked><label for='section-99e08af7-f5f1-4a39-8441-cbfcc2784e1e' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'Discharge' (latitude: 1500, longitude: 3600)>\n",
@@ -751,13 +738,13 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "eaf39e02",
+   "id": "7d33c370",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x2ba9f0dd3640>"
+       "<matplotlib.collections.QuadMesh at 0x2b4b6b33cac0>"
       ]
      },
      "execution_count": 18,
@@ -787,16 +774,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "81fd413f",
+   "id": "92b884c5",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your coordinates (-71.35, 42.64) are closest to these model coordinates (-71.35, 42.65).\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -816,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5cad848d",
+   "id": "9514cc8c",
    "metadata": {},
    "outputs": [
     {
@@ -837,25 +817,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "4f446be0",
+   "execution_count": 21,
+   "id": "a28d9a36",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your coordinates (-71.35, 42.65) are closest to these model coordinates (-71.35, 42.65).\n",
-      "Your coordinates (5.6, 50.7) are closest to these model coordinates (5.65, 50.65).\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([1703886, 1416656])"
+       "(array([1703886, 1413056]), array([-71.35,   5.65]), array([42.65, 50.75]))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,8 +839,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "2d6abd71",
+   "execution_count": 22,
+   "id": "9855918a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cfd4ec0",
+   "id": "675b6b06",
    "metadata": {},
    "outputs": [],
    "source": []
